fix buy button mobile

--- a/components/Pages/Events/CircusCarnival/CircusCarnivalForm/CircusCarnivalForm.module.css
+++ b/components/Pages/Events/CircusCarnival/CircusCarnivalForm/CircusCarnivalForm.module.css
@@ -32,6 +32,8 @@
 .left {
     display: flex;
     flex-direction: column;
+    position: relative;
+    z-index: 5;
 }
 .header {
     width: 100%;
